--- a/BigFloatPlayground/PlaygroundAndShowCase.csproj
+++ b/BigFloatPlayground/PlaygroundAndShowCase.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Showcase - Copy.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BigFloatLibrary\BigFloatLibrary.csproj" />
   </ItemGroup>
 
