Summary: Added tests and continue to work on inverse function.
Details:
Added a new `Benchmark` configuration to solution and project files,
supporting `AnyCPU` and `x64` platforms with optimization enabled.

Updated `BigFloatLibrary.csproj` and `PlaygroundAndShowCase.csproj`
to include the new configuration.

Modified `BigIntegerTools` to
handle edge cases in `requestedPrecision` and refactored the `Inverse`
method for better performance and readability.
Updated `Showcase.cs`
to improve testing and performance evaluation of `BigInteger` inverse
calculations, including new method `TestInverseMethods` and elevated
process priority.

Cleaned up code and improved logging.

In `BigFloatTests`, added new test methods for inverse calculations,
introduced new constants, and updated comments for clarity.

Added
`using System.Linq;` directive and updated project file to include
the `Benchmark` configuration with optimization enabled.

--- a/BigFloatPlayground/PlaygroundAndShowCase.csproj
+++ b/BigFloatPlayground/PlaygroundAndShowCase.csproj
@@ -4,7 +4,16 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>    
 	<AnalysisLevel>preview</AnalysisLevel>
-    <Configurations>Debug;Release;Debug2</Configurations>
+    <Configurations>Debug;Release;Debug2;Benchmark</Configurations>
+    <Platforms>AnyCPU;x64</Platforms>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Benchmark|AnyCPU'">
+    <Optimize>True</Optimize>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Benchmark|x64'">
+    <Optimize>True</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
