--- a/BigFloatLibrary/BigFloatLibrary.csproj
+++ b/BigFloatLibrary/BigFloatLibrary.csproj
@@ -3,7 +3,16 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <AnalysisLevel>preview</AnalysisLevel>
-    <Configurations>Debug;Release;Debug2</Configurations>
+    <Configurations>Debug;Release;Debug2;Benchmark</Configurations>
+    <Platforms>AnyCPU;x64</Platforms>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Benchmark|AnyCPU'">
+    <Optimize>True</Optimize>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Benchmark|x64'">
+    <Optimize>True</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
