Clean up headers and random fraction generation

--- a/.gitignore
+++ b/.gitignore
@@ -198,6 +198,8 @@ PublishScripts/
 *.snupkg
 # The packages folder can be ignored because of Package Restore
 **/[Pp]ackages/*
+# OS/distribution package artifacts
+packages-microsoft-prod.deb
 # except build/, which is used as an MSBuild target.
 !**/[Pp]ackages/build/
 # Uncomment if necessary however generally it will be regenerated when needed
