--- a/BigFloatPlayground/PlaygroundAndShowCase.csproj
+++ b/BigFloatPlayground/PlaygroundAndShowCase.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>    
 	<AnalysisLevel>preview</AnalysisLevel>
-    <Configurations>Debug;Release;Debug2;Benchmark</Configurations>
+    <Configurations>Debug;Release;Debug2;Benchmark;ReleaseMulti</Configurations>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
