Update NuGet README packaging configuration
Clarified the `<PackageReadmeFile>` property to specify the path of the README file inside the `.nupkg` package. Added the `<PackageReadmeFile>` property to the `ReleaseMulti` configuration to ensure the README is included when building the NuGet package.

Modified the `<ItemGroup>` for packing the README file:
- Made the inclusion of the README file conditional on the `ReleaseMulti` configuration.
- Updated the file reference to point to the repository root (`..\README.md`) instead of the project directory.

--- a/BigFloatLibrary/BigFloatLibrary.csproj
+++ b/BigFloatLibrary/BigFloatLibrary.csproj
@@ -35,13 +35,14 @@
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 
-		<!-- NuGet README -->
-		<PackageReadmeFile>README.md</PackageReadmeFile>
+    <!-- NuGet README (path inside the .nupkg) -->
+    <PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<!-- Only in ReleaseMulti do we automatically create the NuGet package -->
 	<PropertyGroup Condition="'$(Configuration)'=='ReleaseMulti'">
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<!-- Benchmark config: always optimized -->
@@ -59,9 +60,9 @@
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
 	</ItemGroup>
 
-	<!-- Pack README into the root of the NuGet package -->
-	<ItemGroup>
-		<None Include="README.md" Pack="true" PackagePath="\" />
+	<!-- Pack README from the repo root into the root of the NuGet package -->
+	<ItemGroup Condition="'$(Configuration)'=='ReleaseMulti'">
+		<None Include="..\README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 </Project>
