Add BenchmarkDotNet suite and baselines

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,6 @@ jobs:
 
       - name: Test
         run: dotnet test BigFloat.sln --configuration Release --no-build --verbosity normal
+
+      - name: Run CI benchmarks (short)
+        run: dotnet run -c Release -p BigFloat.Benchmarks -- --job short --anyCategories CI
