--- a/BigFloatLibrary/BigFloatLibrary.csproj
+++ b/BigFloatLibrary/BigFloatLibrary.csproj
@@ -58,14 +58,12 @@
 
 	<ItemGroup>
 		<!-- GitHub SourceLink -->
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<!-- Path on disk, relative to the .csproj -->
-		<None Include="..\docs\images\icon.png"
-			  Pack="true"
-			  PackagePath="\" />
+		<None Include="..\docs\images\icon.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<!-- Pack README from the repo root into the root of the NuGet package -->
