Resolve build warnings

--- a/BigFloat.Benchmarks/BigFloatLibrary.Benchmarks.csproj
+++ b/BigFloat.Benchmarks/BigFloatLibrary.Benchmarks.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Configurations>Debug;Release</Configurations>
+    <NoWarn>$(NoWarn);CA1515</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
