--- a/tools/ThresholdSweeps/ThresholdSweeps.csproj
+++ b/tools/ThresholdSweeps/ThresholdSweeps.csproj
@@ -6,4 +6,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\BigFloatLibrary\BigFloatLibrary.csproj" />
+  </ItemGroup>
 </Project>
